# tinygfx

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
examples/: CMakeLists.txt
examples/bellows/: CMakeLists.txt  bellows.cpp
examples/bezier/: App.cpp  CMakeLists.txt  Render.cpp  Render.h  Window.cpp  Window.h
examples/buttons/: CMakeLists.txt  buttons.cpp  buttons.h
examples/charts/: CMakeLists.txt  charts.cpp  charts.h
examples/dnd/: CMakeLists.txt  dnd.cpp  dnd.h
examples/dock/: CMakeLists.txt  dock.cpp  dock.h
examples/filebrowser/: CMakeLists.txt  filebrowser.cpp  filebrowser.h
examples/filters/: App.cpp  App.h  CMakeLists.txt  Filter.cpp  Filter.h  Window.cpp  Window.h
examples/gol/: App.cpp  App.h  Buffer.h  BufferInline.h  CMakeLists.txt  GOL.cpp  GOL.h  Window.cpp  Window.h  gol.cpp  gol.h  main.cpp
examples/lists/: CMakeLists.txt  lists.cpp  lists.h
examples/mdi/: CMakeLists.txt  mdi.cpp  mdi.h
examples/noise/: CMakeLists.txt  noise.cpp  noise.h
examples/paint2d/: App.h  CMakeLists.txt  Window.cpp  Window.h
examples/paint3d/: App.cpp  App.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Obj.cpp  Obj.h  Window.cpp  Window.h  main.cpp
examples/popups/: CMakeLists.txt  popups.cpp  popups.h
examples/quad/: CMakeLists.txt  main.cpp
examples/render/simple/: App.cpp  App.h  CMakeLists.txt  Window.cpp  Window.h  main.cpp
examples/simple/: App.cpp  CMakeLists.txt  Window.cpp  Window.h  main.cpp  simple.cpp  simple.h
examples/sliders/: CMakeLists.txt  sliders.cpp  sliders.h
examples/sol/: App.cpp  App.h  CMakeLists.txt  ISol.cpp  ISol.h  Sol.cpp  Sol.h  Sol000.cpp  Sol000.h  Sol001.cpp  Sol001.h  SolFactory.cpp  SolFactory.h  Window.cpp  Window.h  main.cpp  sol.cpp  sol.h
examples/tabs/: CMakeLists.txt  tabs.cpp
examples/textedit/: App.cpp  App.h  CMakeLists.txt  TextWidget.cpp  TextWidget.h  Window.cpp  Window.h  main.cpp  textedit.cpp  textedit.h
lib/: CMakeLists.txt
lib/tgApp/: App.cpp  App.h  CMakeLists.txt  IWindow.cpp  IWindow.h
lib/tgBaseApp/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  CmdLineInline.h  IApp.cpp  IApp.h
lib/tgCore/: Assert.cpp  Assert.h  BBox.cpp  BBox.h  BBox2.h  BBox2Inline.h  BBox3.h  BBox3Inline.h  BBoxInline.h  Box.h  BoxInline.h  BoxPack.cpp  BoxPack.h  CMakeLists.txt  Color.h  ColorInline.h  Command.cpp  Command.h  Context.cpp  Context.h  ContextInline.h  Error.cpp  Error.h  ErrorWin32.cpp  File.cpp  File.h  FileIO.cpp  FileIO.h  FileIOInline.h  FileIOUnix.cpp  FileIOWin32.cpp  FileInfo.cpp  FileInfo.h  FileInfoInline.h  FileInfoUnix.cpp  FileInfoWin32.cpp  FileUnix.cpp  FileWin32.cpp  FontSystem.cpp  FontSystem.h  (+98 more)
lib/tgGL/: CMakeLists.txt  GL.h  Init.cpp  Init.h  Mesh.cpp  Mesh.h  OffscreenBuffer.cpp  OffscreenBuffer.h  Render.cpp  Render.h  RenderPrims.cpp  RenderPrivate.h  RenderShaders_GLES_2.cpp  RenderShaders_GL_4_1.cpp  Shader.cpp  Shader.h  System.cpp  System.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Util.cpp  Util.h  Window.cpp  Window.h
lib/tgIO/: CMakeLists.txt  ImageIO.cpp  ImageIO.h  Init.cpp  Init.h  Options.cpp  Options.h  PNG.cpp  PNG.h  PNGRead.cpp  PNGWrite.cpp
lib/tgRender/: CMakeLists.txt  IRender.cpp  IRender.h  ImageOptions.cpp  ImageOptions.h  ImageOptionsInline.h  RenderOptions.cpp  RenderOptions.h  RenderOptionsInline.h  RenderUtil.cpp  RenderUtil.h
lib/tgResourceApp/: App.cpp  App.h  CMakeLists.txt
lib/tgUI/: Action.cpp  Action.h  Bellows.cpp  Bellows.h  BellowsButton.cpp  BellowsPrivate.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColorPopup.cpp  ColorPopup.h  ColorSwatch.cpp  ColorSwatch.h  ColorWidget.cpp  ColorWidget.h  ComboBox.cpp  ComboBox.h  ComboBoxButton.cpp  ComboBoxItemsWidget.cpp  ComboBoxMenu.cpp  ComboBoxPrivate.h  ComboBoxWidget.cpp  Divider.cpp  Divider.h  DockLayout.cpp  DockLayout.h  DoubleEdit.cpp  DoubleEdit.h  DoubleEditSlider.cpp  DoubleEditSlider.h  DoubleModel.cpp  DoubleModel.h  DoubleSlider.cpp  DoubleSlider.h  DrawUtil.cpp  DrawUtil.h  DrivesModel.cpp  DrivesModel.h  (+127 more)
lib/tgUIApp/: App.h  AppGL.cpp  CMakeLists.txt  IApp.h  IAppGL.cpp  IWindow.h  IWindowGL.cpp  Window.h  WindowGL.cpp
python/: CMakeLists.txt  bindings.cpp
python/examples/: CMakeLists.txt  bellows.py  buttons.py  filebrowser.py  mdi.py  simple.py  sliders.py  tabs.py
python/examples/buttons/: buttons.py
python/examples/mdi/: mdi.py
python/examples/sliders/: sliders.py
python/lib/: CMakeLists.txt
python/lib/tgBaseAppPy/: Bindings.cpp  Bindings.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  IApp.cpp  IApp.h
python/lib/tgCorePy/: Bindings.cpp  Bindings.h  Box.cpp  Box.h  CMakeLists.txt  Color.cpp  Color.h  Context.cpp  Context.h  FontSystem.cpp  FontSystem.h  IRender.cpp  IRender.h  ISystem.cpp  ISystem.h  Image.cpp  Image.h  Memory.cpp  Memory.h  OS.cpp  OS.h  Observable.cpp  Observable.h  ObservableList.cpp  ObservableList.h  ObservableListInline.h  ObservableMap.cpp  ObservableMap.h  ObservableMapInline.h  ObservableValue.cpp  ObservableValue.h  ObservableValueInline.h  Random.cpp  Random.h  Range.cpp  Range.h  Size.cpp  Size.h  Vector.cpp  Vector.h
python/lib/tgUIAppPy/: App.cpp  App.h  Bindings.cpp  Bindings.h  CMakeLists.txt  Window.cpp  Window.h
python/lib/tgUIPy/: Bellows.cpp  Bellows.h  Bindings.cpp  Bindings.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColorPopup.cpp  ColorPopup.h  ColorSwatch.cpp  ColorSwatch.h  ColorWidget.cpp  ColorWidget.h  DoubleEdit.cpp  DoubleEdit.h  DoubleEditSlider.cpp  DoubleEditSlider.h  DoubleModel.cpp  DoubleModel.h  Event.cpp  (+59 more)
python/tests/: CMakeLists.txt  tgtest.py
python/tgBaseAppPy/: Bindings.cpp  CMakeLists.txt  Cmdline.cpp  IApp.cpp  bindings.cpp  bindings.h
python/tgCorePy/: Bindings.h  CMakeLists.txt  Context.cpp  OS.cpp  Size.cpp  bindings.cpp  bindings.h
python/tgUIAppPy/: App.cpp  Bindings.cpp  Bindings.h  CMakeLists.txt  Window.cpp  bindings.cpp  bindings.h
python/tgUIPy/: Bindings.h  CMakeLists.txt  IButton.cpp  IWidget.cpp  IWindow.cpp  PushButton.cpp  RowLayout.cpp  Style.cpp  WidgetOptions.cpp  bindings.cpp  bindings.h
(+266 files in other folders)
