add_subdirectory(bellows)
add_subdirectory(buttons)
add_subdirectory(charts)
add_subdirectory(dock)
add_subdirectory(dnd)
add_subdirectory(filebrowser)
add_subdirectory(gol)
add_subdirectory(lists)
add_subdirectory(mdi)
add_subdirectory(noise)
add_subdirectory(popups)
add_subdirectory(simple)
add_subdirectory(sliders)
add_subdirectory(tabs)
add_subdirectory(textedit)
